--- a/REDAME_E.ipynb
+++ b/REDAME_E.ipynb
@@ -22,10 +22,13 @@
       },
       "source": [
         "\n",
+        "\n",
         "<style>\n",
         "  body {background-color: #EAF6F6;}\n",
         "</style>\n",
         "\n",
+        "\n",
+        "<body>\n",
         "# Kalman filter and Extended Kalman FIter implemented on C++\n",
         "\n",
         " <br>\n",
@@ -210,7 +213,9 @@
         "<br> \n",
         "<br>\n",
         "\n",
-        "![Demostration](https://drive.google.com/uc?export=view&id=1QA1oxbRlMf7DLzVpkw8T2DyDHiHZSm3u)\n"
+        "![Demostration](https://drive.google.com/uc?export=view&id=1QA1oxbRlMf7DLzVpkw8T2DyDHiHZSm3u)\n",
+        "\n",
+        "</body>\n"
       ]
     },
     {
